{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 69,
  "lineage": "72cf8838-ec97-d1e2-fa5c-ea9405bdc03d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "AcaIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2620b7e8afd2c56",
            "domain": "vpc",
            "id": "eipalloc-0a2620b7e8afd2c56",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-236-129-44.compute-1.amazonaws.com",
            "public_ip": "34.236.129.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "AcaClassworkElasticIp"
            },
            "tags_all": {
              "Name": "AcaClassworkElasticIp"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009370443524:internet-gateway/igw-044e4d5b3c40f059d",
            "id": "igw-044e4d5b3c40f059d",
            "owner_id": "009370443524",
            "tags": {
              "Name": "MyAcaIgw"
            },
            "tags_all": {
              "Name": "MyAcaIgw"
            },
            "vpc_id": "vpc-0114f8ebc7419e442"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2620b7e8afd2c56",
            "association_id": "eipassoc-01471a40ac45b773e",
            "connectivity_type": "public",
            "id": "nat-06c962fe8c0d76d50",
            "network_interface_id": "eni-07efbd884c330d218",
            "private_ip": "10.0.91.90",
            "public_ip": "34.236.129.44",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f191ba5c8815845a",
            "tags": {
              "Name": "AcaNatGateway"
            },
            "tags_all": {
              "Name": "AcaNatGateway"
            }
          },
          "dependencies": [
            "aws_eip.AcaIp",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009370443524:route-table/rtb-0f5d51749f718b413",
            "id": "rtb-0f5d51749f718b413",
            "owner_id": "009370443524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06c962fe8c0d76d50",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AcaTaskPrivateRT"
            },
            "tags_all": {
              "Name": "AcaTaskPrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0114f8ebc7419e442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.AcaIp",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009370443524:route-table/rtb-003bcacf4577fcfc0",
            "id": "rtb-003bcacf4577fcfc0",
            "owner_id": "009370443524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-044e4d5b3c40f059d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AcaTaskPublicRT"
            },
            "tags_all": {
              "Name": "AcaTaskPublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0114f8ebc7419e442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a264a153121c9fb",
            "route_table_id": "rtb-0f5d51749f718b413",
            "subnet_id": "subnet-091aef372c6c19808"
          },
          "dependencies": [
            "aws_eip.AcaIp",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06018b332f69c4708",
            "route_table_id": "rtb-0f5d51749f718b413",
            "subnet_id": "subnet-07e763a050e131ed3"
          },
          "dependencies": [
            "aws_eip.AcaIp",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0198a4b569d554a1a",
            "route_table_id": "rtb-003bcacf4577fcfc0",
            "subnet_id": "subnet-0f191ba5c8815845a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0254121fbd69aedbb",
            "route_table_id": "rtb-003bcacf4577fcfc0",
            "subnet_id": "subnet-059f7a1cf28fc3b83"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009370443524:subnet/subnet-091aef372c6c19808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091aef372c6c19808",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009370443524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACA-Task-private-subnet",
              "kubernetes.io/cluster/Aca-07-08-2022-classwork-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ACA-Task-private-subnet",
              "kubernetes.io/cluster/Aca-07-08-2022-classwork-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0114f8ebc7419e442"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009370443524:subnet/subnet-07e763a050e131ed3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e763a050e131ed3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009370443524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACA-Task-private-subnet2",
              "kubernetes.io/cluster/Aca-07-08-2022-classwork-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ACA-Task-private-subnet2",
              "kubernetes.io/cluster/Aca-07-08-2022-classwork-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0114f8ebc7419e442"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009370443524:subnet/subnet-0f191ba5c8815845a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f191ba5c8815845a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009370443524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACA-Task-private-subnet",
              "kubernetes.io/cluster/Aca-07-08-2022-classwork-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ACA-Task-private-subnet",
              "kubernetes.io/cluster/Aca-07-08-2022-classwork-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0114f8ebc7419e442"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009370443524:subnet/subnet-059f7a1cf28fc3b83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059f7a1cf28fc3b83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009370443524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACA-Task-private-subnet2",
              "kubernetes.io/cluster/Aca-07-08-2022-classwork-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ACA-Task-private-subnet2",
              "kubernetes.io/cluster/Aca-07-08-2022-classwork-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0114f8ebc7419e442"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009370443524:vpc/vpc-0114f8ebc7419e442",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0edb9773863e2f210",
            "default_route_table_id": "rtb-0d5d117740dcb0fd2",
            "default_security_group_id": "sg-06a128ea3efcc4f86",
            "dhcp_options_id": "dopt-0ffb915d43939b33b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0114f8ebc7419e442",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d5d117740dcb0fd2",
            "owner_id": "009370443524",
            "tags": {
              "Name": "ACA-cluster-vpc"
            },
            "tags_all": {
              "Name": "ACA-cluster-vpc"
            }
          }
        }
      ]
    }
  ]
}